RESOLVED FIXED299888
ReadableStream constructor should rethrow start exceptions
https://bugs.webkit.org/show_bug.cgi?id=299888
Summary ReadableStream constructor should rethrow start exceptions
youenn fablet
Reported 2025-09-30 11:36:02 PDT
ReadableStream constructor should rethrow start exceptions
Attachments
Radar WebKit Bug Importer
Comment 1 2025-09-30 11:36:17 PDT
youenn fablet
Comment 2 2025-09-30 13:18:03 PDT
EWS
Comment 3 2025-10-01 00:01:24 PDT
Committed 300804@main (9e41756dea41): <https://commits.webkit.org/300804@main> Reviewed commits have been landed. Closing PR #51587 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.